--- a/appState.json
+++ b/appState.json
@@ -1,98 +1,48 @@
 {
   "EDITOR_STATE": {
     "allProjectFiles": {
-      "fc02217f-da68-43ca-9939-dee8a6496b2c": {
-        "id": "fc02217f-da68-43ca-9939-dee8a6496b2c",
+      "f8ee54e3-5d0c-406c-82ab-2e305406ac30": {
+        "id": "f8ee54e3-5d0c-406c-82ab-2e305406ac30",
         "parent": null,
-        "name": "sss",
-        "type": "DIRECTORY",
-        "isDirectory": true,
-        "children": [
-          "da4b4b61-76ec-4ca9-90e9-fc83466371cd"
-        ],
-        "isRemovable": false,
-        "filePath": "sss"
-      },
-      "da4b4b61-76ec-4ca9-90e9-fc83466371cd": {
-        "id": "da4b4b61-76ec-4ca9-90e9-fc83466371cd",
-        "parent": "fc02217f-da68-43ca-9939-dee8a6496b2c",
-        "name": "lambda.js",
+        "name": "sss.js",
         "type": "JS_LAMBDA",
         "isDirectory": false,
         "children": [],
         "isRemovable": true,
-        "filePath": "sss/lambda.js",
-        "code": "let AWS = require('aws-sdk');\nconst sns = new AWS.SNS();\n\nexports.handler = function (event, context, callback) {\n    sns.subscribe({\n        Protocol: 'https',\n        Endpoint: 'https://052p9kjn18.execute-api.us-east-1.amazonaws.com/test11/indunil/qa/tst',\n        TopicArn: 'arn:aws:sns:us-east-1:318300609668:TestSNS'\n    }).promise()\n        .then(data => {\n            console.log(data);\n            console.log(\"data\");\n            // your code goes here\n        })\n        .catch(err => {\n            console.log(err);\n            console.log(\"errrrr\");\n            // error handling goes here\n        });\n\n    callback(null, { \"message\": \"Successfully executed\" });\n}",
+        "filePath": "sss.js",
+        "cursor": {
+          "lineNumber": 1,
+          "column": 1
+        },
         "config": {
-          "runtime": "nodejs8.10",
+          "runtime": "nodejs10.x",
           "handler": "handler",
           "timeout": 60,
           "memory": 128,
           "layers": []
         },
-        "triggers": [
-          {
-            "resourceName": "apigusEast1sachithraAPInametstget",
-            "config": {}
-          }
-        ],
+        "triggers": [],
         "testCases": {
-          "37c29287-51e4-4aaf-9986-4374b2885b9b": {
-            "id": "37c29287-51e4-4aaf-9986-4374b2885b9b",
+          "1a593a0a-e75f-46d0-bc15-f3db31f3ddc5": {
+            "id": "1a593a0a-e75f-46d0-bc15-f3db31f3ddc5",
             "name": "Test event",
-            "functionId": "da4b4b61-76ec-4ca9-90e9-fc83466371cd",
+            "functionId": "f8ee54e3-5d0c-406c-82ab-2e305406ac30",
             "event": "{\"key1\": \"value1\", \"key2\": \"value2\", \"key3\": \"value3\"}",
             "eventTemplate": "hello-world"
           }
         }
       }
     },
-    "deletedFiles": [],
-    "rootNode": "fc02217f-da68-43ca-9939-dee8a6496b2c",
     "openFiles": [
-      "da4b4b61-76ec-4ca9-90e9-fc83466371cd"
+      "f8ee54e3-5d0c-406c-82ab-2e305406ac30"
     ],
-    "currentFileId": "da4b4b61-76ec-4ca9-90e9-fc83466371cd",
+    "currentFileId": "f8ee54e3-5d0c-406c-82ab-2e305406ac30",
     "resources": {
-      "apigusEast1sachithraAPInametstget": {
-        "name": "apigusEast1sachithraAPInametstget",
-        "type": "API_GATEWAY",
+      "ebResource": {
+        "name": "ebResource",
+        "type": "EventBridge",
         "config": {
-          "selectedRegion": "us-east-1",
-          "apiMode": 1,
-          "apiName": "sachithraAPIname",
-          "apiId": "052p9kjn18",
-          "endpointType": "REGIONAL",
-          "rootResourceId": "zrjp6rdv3b",
-          "existingResources": {
-            "/indunil": "gv2c1w",
-            "/indunil/qa/tst": "r6hp77",
-            "/indunil/qa": "yptvr5",
-            "/": "zrjp6rdv3b"
-          },
-          "resourceMode": 1,
-          "resourcePath": "/indunil/qa/tst",
-          "resourceName": "tst",
-          "resourceId": "r6hp77",
-          "restMethod": "GET",
-          "proxyIntegration": false,
-          "enableCORS": false,
-          "stageMode": 1,
-          "stageName": "test11",
-          "stageDeploymentId": "j5n9qk",
-          "mode": 1
-        }
-      },
-      "snsusEast1TestSNS": {
-        "name": "snsusEast1TestSNS",
-        "type": "SNS",
-        "config": {
-          "topicMode": 1,
-          "topicName": "TestSNS",
-          "topicArn": "arn:aws:sns:us-east-1:318300609668:TestSNS",
-          "topicRegion": "us-east-1",
-          "snsType": 0,
-          "subscriptions": []
+          "selectedRegion": "us-east-1"
         }
       }
     },
@@ -114,8 +64,8 @@
       "dependencies": {
         "aws-sdk": {
           "name": "aws-sdk",
-          "language": "javascript",
-          "version": "2.176.0",
+          "language": "nodejs",
+          "version": "2.644.0",
           "dev": true,
           "notRemovable": false
         }
@@ -128,8 +78,9 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
+    "language": "nodejs",
     "platformRegions": {},
-    "lastSave": 1568017145780
+    "lastSave": 1585288211863
   },
   "VCS_STATE": {
     "provider": "GitHub",
